--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     //pantalla de registro
     <string name="title_activity_main_registro">MainActivityRegistro</string>
     <string name="texttituloregistro">Registro de usuarios</string>
-    <string name="edtnombre">Nombre</string>
+    <string name="edtnombre">Nombre(s)</string>
     <string name="edtcarrera">Carrera</string>
     <string name="edtmail">Correo Electronico</string>
     <string name="edtmunicipio">Municipio</string>
@@ -17,4 +17,13 @@
     <string name="title_activity_recyclercrearviaje">Recyclercrearviaje</string>
     <string name="btnaceptar">Aceptar</string>
     <string name="btnrechazar">Rechazar</string>
+    //Recycler Crear viaje
+    <string name="Sem">Semestre:</string>
+    <string name="Destino">Destino:</string>
+    <string name="horasal">Hora salida:</string>
+    <string name="conductor">Conductor: </string>
+    <string name="nota">Agregar Nota:</string>
+    <string name="nocontrol">No Control:</string>
+
+
 </resources>
