Se agrego la base de datos en SQLITE y ya se registra la infomacion del formulario de registro en SQLite

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="btnrechazar">Rechazar</string>
     //Recycler Crear viaje
     <string name="Sem">Semestre:</string>
+    <string name="Semest">Semestre</string>
     <string name="Destino">Destino:</string>
     <string name="horasal">Hora salida:</string>
     <string name="conductor">Conductor: </string>
